--- a/index.html
+++ b/index.html
@@ -2,13 +2,9 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link
-      rel="icon"
-      type="image/svg+xml"
-      href="/public/free-icon-coffee-6191416.png"
-    />
+    <link rel="icon" type="image/svg+xml" href="/vite.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Sip Happens Cafe</title>
+    <title>Voting app</title>
   </head>
   <body>
     <div id="root"></div>
